<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.gaborbalazs.smartplatform</groupId>
	<artifactId>lottery-service</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>lottery-service</name>
	<description>Lottery service for different lottery types</description>

	<properties>
		<project.version>1.0-SNAPSHOT</project.version>
		<java.version>25</java.version>

		<!-- Project versions -->
		<logging-filter.version>1.0-SNAPSHOT</logging-filter.version>

		<!-- 3rd party versions -->
		<mysql.version>8.0.33</mysql.version>
        <springdoc.version>3.0.1</springdoc.version>
		<jayway-jsonpath.version>3.0.0</jayway-jsonpath.version>
		<spotify-dockerfile-plugin.version>1.4.10</spotify-dockerfile-plugin.version>
		<apache-commons-lang3.version>3.20.0</apache-commons-lang3.version>
	</properties>

	<modules>
		<module>service</module>
		<module>db-dao</module>
		<module>bet-dao</module>
		<module>web</module>
		<module>application</module>
		<module>integration-test</module>
		<module>release</module>
    </modules>

	<!-- Profiles -->
	<profiles>
		<profile>
			<id>fast</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
			</properties>
		</profile>
	</profiles>

	<!-- Available dependencies -->
	<dependencyManagement>
		<dependencies>
			<!-- Module dependencies -->
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>lottery-service-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>lottery-service-db-dao</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>lottery-service-bet-dao</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>lottery-service-web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>lottery-service-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>lottery-service-release</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Smart Platform dependencies -->
			<dependency>
				<groupId>org.gaborbalazs.smartplatform</groupId>
				<artifactId>logging-filter</artifactId>
				<version>${logging-filter.version}</version>
			</dependency>

			<!-- 3rd party dependencies -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-jpa</artifactId>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.version}</version>
			</dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>${jayway-jsonpath.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<!-- Common dependencies, inherited by all child modules -->
	<dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aspectj</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${apache-commons-lang3.version}</version>
		</dependency>
	</dependencies>

	<!-- Available plugins -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.spotify</groupId>
					<artifactId>dockerfile-maven-plugin</artifactId>
					<version>${spotify-dockerfile-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
